# docs/swagger.json
@@ -360,6 +360,12 @@
                     "204": {
                         "description": "No Content"
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_johnal95_workouts-pwa_internal_httpx.ErrorResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -399,11 +405,38 @@
                         "name": "workoutId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Workout log payload",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_workout_transport_http.CreateWorkoutLogRequest"
+                        }
                     }
                 ],
                 "responses": {
-                    "501": {
-                        "description": "Not Implemented",
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/internal_workout_transport_http.WorkoutLogResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_johnal95_workouts-pwa_internal_httpx.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_johnal95_workouts-pwa_internal_httpx.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/github_com_johnal95_workouts-pwa_internal_httpx.ErrorResponse"
                         }
@@ -567,6 +600,17 @@
                 }
             }
         },
+        "internal_workout_transport_http.CreateWorkoutLogRequest": {
+            "type": "object",
+            "required": [
+                "date"
+            ],
+            "properties": {
+                "date": {
+                    "type": "string"
+                }
+            }
+        },
         "internal_workout_transport_http.CreateWorkoutRequest": {
             "type": "object",
             "required": [
@@ -622,6 +666,20 @@
                 },
                 "position": {
                     "type": "integer"
+                }
+            }
+        },
+        "internal_workout_transport_http.WorkoutLogResponse": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "workout_id": {
+                    "type": "string"
                 }
             }
         },
